<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/screenBackground">

    <!-- Header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:background="@color/tapeRed">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_back_arrow"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:src="@drawable/lcterm"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Date Selectors -->
    <EditText
        android:id="@+id/fromDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/select_from_date"
        android:focusable="false"
        android:clickable="true"
        android:padding="16dp"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textSecondary"
        android:background="@drawable/rounded_edittext"
        android:drawableEnd="@drawable/ic_calendar" />

    <EditText
        android:id="@+id/toDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/select_to_date"
        android:focusable="false"
        android:clickable="true"
        android:padding="16dp"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textSecondary"
        android:background="@drawable/rounded_edittext"
        android:drawableEnd="@drawable/ic_calendar" />

    <!-- Submit Button -->
    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/export_csv"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/darkerRed"
        android:padding="16dp"
        android:textSize="16sp" />
</LinearLayout>
